Spill med canvas. Har en ganske stor bug, men skal fikse den når jeg jobber neste gang!

--- a/Game 2.0/style.css
+++ b/Game 2.0/style.css
@@ -5,8 +5,3 @@
 	height:auto;
 }
 
-#ramme {
-	width:800px;
-	height:500px;
-	background-image:url(background.jpg);
-}
